--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>FgoDrops</title>
-        <base href="https://atruong18.github.io/FateGO/">        <meta content="width=device-width, initial-scale=1" name="viewport">
-        <link href="favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="styles.a191eb92b60412fdd129.css"></head>
-    <body>
-        <app-root></app-root>
-    <script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.41326c58afb664d7b445.js" type="module"></script><script src="main-es5.41326c58afb664d7b445.js" nomodule defer></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link href="/FateGO/favicon.ico" rel="icon"/><meta content="width=device-width,initial-scale=1" name="viewport"/><meta content="#000000" name="theme-color"/><meta content="Web site created using create-react-app" name="description"/><link href="/FateGO/logo192.png" rel="apple-touch-icon"/><link href="/FateGO/manifest.json" rel="manifest"/><title>React App</title><script defer="defer" src="/FateGO/static/js/main.9171029e.js"></script><link href="/FateGO/static/css/main.2735e5a2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
